--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
